--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap');
 
 :root{
-    --text-color: #39FF14;  /* to call it somewhere var(--text-color)*/
+    --text-color: #0b1f08;  /* to call it somewhere var(--text-color)*/
     --text-background: #166d3b;
     --white-color: #fff; /*for padding, margin, font, etc.*/
 }
@@ -40,6 +40,24 @@ main {
     /* box-shadow: 3px 3px 2px #fff; */
     box-shadow:  20px 20px 60px rgb(15, 51, 23, .3),
                 -20px -20px 60px rgb(15, 51, 23, .15);
+    padding: 3rem;
 }
 
+header{
+    height: 14rem;
+    display: flex;
+    justify-content: space-between;
+    margin: 1rem;
+}
+
+header h1{
+    display: flex;
+    flex-direction: column;
+    font-size: 1.8rem;
+    line-height: 1.3;
+}
+
+header p {
+    font-size:1.3rem;
+}
 
