--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,7 @@
 
 :root{
     --text-color: #0b1f08;  /* to call it somewhere var(--text-color)*/
-    --text-background: #166d3b;
+    --text-background: #7dce4f;
     --white-color: #fff; /*for padding, margin, font, etc.*/
 }
 
@@ -40,24 +40,105 @@ main {
     /* box-shadow: 3px 3px 2px #fff; */
     box-shadow:  20px 20px 60px rgb(15, 51, 23, .3),
                 -20px -20px 60px rgb(15, 51, 23, .15);
-    padding: 3rem;
+    padding: 2.5rem;
 }
 
 header{
-    height: 14rem;
+    height: 11rem;
     display: flex;
     justify-content: space-between;
-    margin: 1rem;
+    margin: 0.8rem;
 }
 
 header h1{
     display: flex;
     flex-direction: column;
-    font-size: 1.8rem;
+    font-size: 2rem;
     line-height: 1.3;
 }
 
+header h1:hover{
+    color: #39FF14;
+}
+
 header p {
-    font-size:1.3rem;
+    font-size:1.5rem;
+}
+
+.hands{
+    height: 15rem;
+    display: flex;
+    justify-content: space-between;
+    margin: 0.8rem;
+}
+
+.hands button{
+    width: 11.5rem;
+    height: 11.5rem;
+    border-radius: 50%;
+    font-size: 7rem;
+    background-color: var(--text-background);
+    color:#557c66 40%, rgb(109, 138, 31, 0.6);
+    border: 0;
+    cursor: pointer;
+    /* transition of button when touched or clicked */
+    transition: all 0.2s ease;
+}
+
+.hands button:hover{
+    transform: translateY(8px) translateX(4px);
+    color: rgb(210, 247, 4);
+}
+
+.hands button:hover:active{
+    -webkit-transform: translateZ(1);
+    transform: scale3d(1.3, 1.3, 1.3);
+    color: aqua;
+}
+
+.result{
+    text-align: center;
+    font-size: 1.6rem;
+}
+
+.result p{
+    margin: 0.4rem;
+    margin-top: 0.4rem;
+}
+
+.result button{
+    padding: 0.8rem 2rem;
+    background-color: var(--text-color);
+    color: var(--white-color);
+    width: 50%;
+    font-size: 1.3rem;
+    font-weight: bold;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.result button:hover{
+    transform: translateY(8px) translateX(4px);
+    color: rgb(210, 247, 4);
+}
+
+.result button:hover:active{
+    -webkit-transform: translateZ(1);
+    transform: scale3d(1.1, 1.1, 1.1);
+    color: green;
+}
+
+.result-message{
+    padding: 0.8rem 2rem;
+    background-color: var(--text-color);
+    color: var(--white-color);
+    width: 50%;
+    margin: 1.5rem auto;
+    font-size: 1.6rem;
+    font-weight: bold;
+}
+
+.hidden{
+    display: none;
 }
 
