--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap');
 
 :root{
-    --text-color: #0b1f08;  /* to call it somewhere var(--text-color)*/
-    --text-background: #7dce4f;
+    --text-color: #4aac3b;  /* to call it somewhere var(--text-color)*/
+    --text-background: #f3a358;
     --white-color: #fff; /*for padding, margin, font, etc.*/
 }
 
@@ -19,7 +19,7 @@ html{
 body{
     font-family: 'Poppins', sans-serif;
     background-color: var(--text-background);
-    background-image: linear-gradient(147deg, #134428 0%, rgb(51, 133, 78) 74%);
+    background-image: linear-gradient(147deg, #eb832ef1 0%, rgb(235, 238, 44) 74%);
 
     display: flex;
     justify-content: center;
@@ -31,11 +31,11 @@ body{
 }
 
 main {
-    height: 35rem;
-    width: 35rem;
+    height: 38rem;
+    width: 38rem;
     border-radius: 1rem;
     background-color: var(--white-color);
-    background-image: linear-gradient(315deg, #557c66 0%, rgb(109, 138, 31) 80%);
+    background-image: linear-gradient(315deg, #c9dfd3 0%, rgb(250, 250, 250) 80%);
     /* box-shadow properties <x-axis dist> <y-axis dist> <blur-radius> <blur-spread> color */
     /* box-shadow: 3px 3px 2px #fff; */
     box-shadow:  20px 20px 60px rgb(15, 51, 23, .3),
@@ -51,6 +51,7 @@ header{
 }
 
 header h1{
+    color: var(--text-color);
     display: flex;
     flex-direction: column;
     font-size: 1.8rem;
@@ -63,6 +64,7 @@ header h1:hover{
 
 header p {
     font-size:1.3rem;
+    color: rgb(165, 114, 38);
 }
 
 .hands{
@@ -78,7 +80,7 @@ header p {
     border-radius: 50%;
     font-size: 5rem;
     background-color: var(--text-background);
-    color:#557c66 40%, rgb(109, 138, 31, 0.6);
+    color:rgb(72, 206, 72);
     border: 0;
     cursor: pointer;
     /* transition of button when touched or clicked */
@@ -86,6 +88,7 @@ header p {
 }
 
 .hands button:hover{
+    border-radius: 30%;
     transform: translateY(8px) translateX(4px);
     color: rgb(210, 247, 4);
 }
@@ -132,7 +135,7 @@ header p {
 }
 
 .result-message{
-    background-color: var(--text-color);
+    background-color: orangered;
     color: var(--white-color);
     width: 40%;
     margin: 0.8rem auto;
